[gd_scene load_steps=7 format=2]

[ext_resource path="res://enemy/blue_enemy.gd" type="Script" id=1]
[ext_resource path="res://enemy/enemy.glb" type="PackedScene" id=2]
[ext_resource path="res://enemy/prism_area.tscn" type="PackedScene" id=3]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1, 1.20057, 1 )

[sub_resource type="Animation" id=2]
resource_name = "float"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Character:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.3, 0.9 ),
"transitions": PoolRealArray( 0.3, 1 ),
"update": 0,
"values": [ Vector3( 0, 0.478475, 0 ), Vector3( 0.0319214, 0.819586, -0.00259554 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/Character:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.3, 0.4, 0.7, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -9.551, 0, 0 ), Vector3( 0.622502, 0, 0 ), Vector3( 11.4967, 2.98079, -0.603191 ), Vector3( 0.582003, 0, 0 ), Vector3( -10.1282, 2.65537, -0.69615 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "squash"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Character:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 4.61426, 0, 0 ), Vector3( 4.614, -360, 0 ), Vector3( 4.614, -720, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/Character:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ), Vector3( 0.2, 0.2, 0.2 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "kill"
} ]
}

[node name="BlueEnemy" type="KinematicBody" groups=["enemies"]]
collision_layer = 2
collision_mask = 5
script = ExtResource( 1 )

[node name="Pivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.354281, 0 )

[node name="Character" parent="Pivot" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 0.996759, -0.080447, 0, 0.080447, 0.996759, 0, 0.478475, 0 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 0.54, 0, 0, 0, 1.5, 0, 0.671283, 0.295466 )
visible = false
shape = SubResource( 1 )

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="."]
transform = Transform( 1.21071, 0, 0, 0, 1, 0, 0, 0, 1.7127, 0, 0, 0.28548 )
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "float"
anims/float = SubResource( 2 )
anims/squash = SubResource( 3 )

[node name="PrismArea" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -3 )
visible = false

[connection signal="screen_exited" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_screen_exited"]
[connection signal="body_entered" from="PrismArea" to="." method="_on_PrismArea_body_entered"]
