[gd_scene load_steps=11 format=2]

[ext_resource path="res://entities/enemy/blue_enemy/blue_enemy.gd" type="Script" id=1]
[ext_resource path="res://entities/enemy/prism_area.tscn" type="PackedScene" id=2]
[ext_resource path="res://entities/enemy/slime_jump.ogg" type="AudioStream" id=3]
[ext_resource path="res://entities/enemy/exclamation_mark.png" type="Texture" id=4]
[ext_resource path="res://entities/enemy/purple_enemy/purple_enemy.glb" type="PackedScene" id=5]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1, 1.20057, 1 )

[sub_resource type="Animation" id=2]
resource_name = "float"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Character:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.3, 0.9 ),
"transitions": PoolRealArray( 0.3, 1 ),
"update": 0,
"values": [ Vector3( 0, 0.478475, 0 ), Vector3( 0.0319214, 0.819586, -0.00259554 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/Character:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.3, 0.4, 0.7, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -9.551, 0, 0 ), Vector3( 0.622502, 0, 0 ), Vector3( 11.4967, 2.98079, -0.603191 ), Vector3( 0.582003, 0, 0 ), Vector3( -10.1282, 2.65537, -0.69615 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "squash"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Character:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 4.61426, 0, 0 ), Vector3( 4.614, -360, 0 ), Vector3( 4.614, -720, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/Character:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ), Vector3( 0.2, 0.2, 0.2 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "kill"
} ]
}

[sub_resource type="SpatialMaterial" id=4]
flags_transparent = true
params_billboard_mode = 1
albedo_texture = ExtResource( 4 )

[sub_resource type="QuadMesh" id=5]
material = SubResource( 4 )
size = Vector2( 1.5, 1.5 )

[node name="PurpleEnemy" type="KinematicBody" groups=["enemies"]]
transform = Transform( 6, 0, 0, 0, 6, 0, 0, 0, 6, 0, 0, 0 )
collision_layer = 2
collision_mask = 524293
script = ExtResource( 1 )
squash_sound = ExtResource( 3 )

[node name="Pivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.354281, 0 )

[node name="Character" parent="Pivot" instance=ExtResource( 5 )]
transform = Transform( 0.999737, 0.00211386, 0.0228296, -0.00598565, 0.985272, 0.170891, -0.0221321, -0.170982, 0.985026, 0.0239411, 0.734308, -0.00194665 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 0.54, 0, 0, 0, 1.5, 0, 0.671283, 0.295466 )
visible = false
shape = SubResource( 1 )

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="."]
transform = Transform( 1.21071, 0, 0, 0, 1, 0, 0, 0, 1.7127, 0, 0, 0.28548 )
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "float"
anims/float = SubResource( 2 )
anims/squash = SubResource( 3 )

[node name="PrismArea" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -3 )
visible = false
monitoring = false
monitorable = false

[node name="AlertTimer" type="Timer" parent="."]
one_shot = true

[node name="ExclamationMark" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.2, 0 )
visible = false
mesh = SubResource( 5 )

[connection signal="screen_exited" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_screen_exited"]
[connection signal="body_entered" from="PrismArea" to="." method="_on_PrismArea_body_entered"]
[connection signal="timeout" from="AlertTimer" to="." method="_on_AlertTimer_timeout"]
